<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".transacao.DetalhesTransacaoActivity">
    <item
        android:id="@+id/action_salvar"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/label_action_salvar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_excluir"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/label_action_excluir"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_efetivar"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/label_action_efetivar"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_estornar"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/label_action_estornar"
        app:showAsAction="always" />
</menu>
