<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joseilton.mobilecontroller.transacao.DetalhesTransacaoActivity"
    tools:showIn="@layout/activity_detalhes_transacao">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RadioGroup
                android:id="@+id/tipo_RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/despesa_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_transacao_despesa" />

                <RadioButton
                    android:id="@+id/receita_radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_transacao_receita" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_attach_money_white_24dp"
                    android:tint="@color/grey" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/valor_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/valor_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_transacao_valor"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="bottom"
                    android:src="@android:drawable/ic_menu_edit" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/descricao_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/descricao_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_transacao_descricao"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:src="@android:drawable/ic_input_get" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_transacao_categoria"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text" />

                    <Spinner
                        android:id="@+id/categoria_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_account_balance_wallet_black_24dp"
                    android:tint="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_transacao_conta"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text" />

                    <Spinner
                        android:id="@+id/conta_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:tint="@color/grey"
                    android:src="@drawable/ic_event_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_transacao_vencimento"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/vencimento_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="showDialog"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/efetivado_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/label_transacao_efetivado" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
