<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.joseilton.mobilecontroller.categoria.DetalhesCategoriaActivity"
    tools:showIn="@layout/activity_detalhes_categoria">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/tipo_RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/debito_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/label_radio_button_debito"
                    android:textColor="@color/primary_text" />

                <RadioButton
                    android:id="@+id/credito_RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/label_radio_button_credito"
                    android:textColor="@color/primary_text" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_lens_black_36dp"
                    android:tint="@color/colorAccent"
                    android:id="@+id/colorImageView"
                    android:layout_gravity="bottom" />
                "/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/descricao_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/descricaoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_categoria_descricao"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
