<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joseilton.mobilecontroller.transferencia.DetalhesTransferenciaActivity"
    tools:showIn="@layout/activity_detalhes_transferencia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_attach_money_white_24dp"
                    android:tint="@color/grey"
                    android:id="@+id/imageView4"
                    android:layout_gravity="bottom" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/valor_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/valor_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_transacao_valor"
                        android:inputType="numberDecimal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@android:drawable/ic_menu_edit"
                    android:id="@+id/imageView"
                    android:layout_gravity="bottom" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/descricao_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/descricao_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_transferencia_descricao"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:tint="@color/grey"
                    android:src="@drawable/ic_event_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_transferencia_data"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/data_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="showDialog"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_account_balance_wallet_black_24dp"
                    android:tint="@color/grey"
                    android:id="@+id/imageView2"
                    android:layout_gravity="bottom" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_transferencia_origem"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text" />

                    <Spinner
                        android:id="@+id/origem_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_account_balance_wallet_black_24dp"
                    android:tint="@color/grey"
                    android:id="@+id/imageView3"
                    android:layout_gravity="bottom" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/label_transferencia_destino"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/secondary_text" />

                    <Spinner
                        android:id="@+id/destino_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/primary_text" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
